NM-4472 Blog heading fixes
NM-4473 Fixes truncated google button

NM-4474 Removed invalid font family

Added header image for user blogs

--- a/app/frontend/stylesheets/new_ui/forms/_hints.scss
+++ b/app/frontend/stylesheets/new_ui/forms/_hints.scss
@@ -10,6 +10,8 @@
     background: none;
     padding: 5px;
     font-size: 0;
+    width: 10px;
+    height: 10px;
 
     &:before {
         @include fa-icon();
